@@ -70,6 +70,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13854: Make multiprocessing properly handle non-integer
+  non-string argument to SystemExit.
+
 - Issue #12157: Make pool.map() empty iterables correctly.  Initial
   patch by mouad.
 
